<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_cover"
                android:layout_width="150dp"
                android:layout_height="180dp"
                android:background="@color/abu"
                android:scaleType="fitXY"
                android:contentDescription="@string/image_cover" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_cover"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="8dp"
                android:text="@string/tv_title"/>

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_toEndOf="@id/img_cover"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="26dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:layout_marginTop="8dp"
                android:text="@string/tv_overview"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>