<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_cover"
                android:layout_width="150dp"
                android:layout_height="180dp"
                android:src="@color/colorPrimary"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_cover"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp"
                android:text="@string/tv_title"/>

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_toEndOf="@id/img_cover"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:layout_marginTop="8dp"
                android:text="@string/tv_overview"/>

            <Button
                android:id="@+id/btn_unfavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/img_cover"
                android:layout_below="@id/tv_overview"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:textColor="@color/white"
                android:background="@android:color/holo_red_dark"
                android:layout_marginTop="36dp"
                android:text="@string/tidak_suka"/>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>