<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.SettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:layout_collapseMode="pin"/>

    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:cardCornerRadius="0dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/alert_daily_reminder"
                        android:textSize="20sp"
                        android:textColor="@android:color/black"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingRight="5dp"
                        android:paddingLeft="5dp"
                        android:minHeight="30dp"
                        android:gravity="center_vertical"
                        android:clickable="true"
                        android:focusable="true">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:text="@string/alert_back_daily_reminder"/>

                        <View
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/daily_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="@color/abu"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:paddingLeft="20dp"
                        android:text="@string/alert_release_reminder"
                        android:textSize="20sp"
                        android:textColor="@android:color/black"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:orientation="horizontal"
                        android:minHeight="30dp"
                        android:gravity="center_vertical"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackground">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingRight="15dp"
                            android:paddingLeft="15dp"
                            android:text="@string/alert_back_release_reminder"/>

                        <View
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/release_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"/>

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>